fix x overflow and mobile menu

--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -1,6 +1,8 @@
 
 
 .Home {
+    width: 100%;
+    box-sizing: border-box;
     // display: flex;
     // flex-direction: column;
     // align-items: center;
