--- a/src/index.css
+++ b/src/index.css
@@ -15,40 +15,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
-body {
+html, body, #root {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  /* max-width: 100vw; */
+  /* overflow-x: clip; */
+}
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+* {
+  margin: 0;
+  padding: 0;
 }
